--- a/views/quotes/index.ejs
+++ b/views/quotes/index.ejs
@@ -11,7 +11,7 @@
   <body>
    <div class="index-header-div">
      <h1>All Quotes</h1>
-     <a class="add-quote" href="/quote/new">Add quote</a>
+     <a class="add-quote" href="/quotes/new">Add quote</a>
    </div>
        <img
      class="quote-pic1"
